--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ datasets show that the proposed approach is efficient and robust compared to pre
         <th colspan="4">ABCD</th> 
     </tr> -->
  <h5 class="subtitle has-text-centered">
-        Slide right to view the harmonized Portrait!
+        Slide left to view the harmonized Portrait!
       </h2>
     <tr>
       <!-- <div class="image-compare">
