add mask details

--- a/index.html
+++ b/index.html
@@ -259,7 +259,12 @@
               <td><img src="./static/images/0289_res.jpg" alt="" border=0 height=100 width=300></img></th>
     </tr>
 
+
+
 </table>
+ <h6 class="subtitle has-text-centered">
+        Red mask represents the composite foreground region and Blue mask represents reference region chosen by user to guide the harmonization.
+      </h2>
   </body>
   <html>
 <!-- 
