--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
               <a href="https://research.adobe.com/person/jose-echevarria/">Jose Echevarria</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.linkedin.com/in/yinglan-ma/">Yinglan Ma</a><sup>2</sup>
+              <a href="https://www.linkedin.com/in/yinglan-ma/">Yinglan Ma</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="http://www.zijunwei.org/">Zijun Wei</a><sup>2</sup>
+              <a href="http://www.zijunwei.org/">Zijun Wei</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="http://www.kalyans.org/">Kalyan Sunkavalli</a><sup>2</sup>
+              <a href="http://www.kalyans.org/">Kalyan Sunkavalli</a><sup>2</sup>,
             </span>
             <span class="author-block">
               <a href="https://engineering.jhu.edu/vpatel36/sciencex_teams/vishalpatel/">Vishal M. Patel</a><sup>1</sup>
