--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="tba"
+                <a href="https://arxiv.org/abs/2203.08216"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -155,7 +155,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="tba"
+                <a href="https://arxiv.org/abs/2203.08216"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
