--- a/index.html
+++ b/index.html
@@ -466,7 +466,13 @@ datasets show that the proposed approach is efficient and robust compared to pre
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code></code></pre>
+     
+    <pre><code>@article{valanarasu2022interactive,
+  title={Interactive Portrait Harmonization},
+  author={Valanarasu, Jeya Maria Jose and Zhang, He and Zhang, Jianming and Wang, Yilin and Lin, Zhe and Echevarria, Jose and Ma, Yinglan and Wei, Zijun and Sunkavalli, Kalyan and Patel, Vishal M},
+  journal={arXiv preprint arXiv:2203.08216},
+  year={2022}
+}</code></pre>
   </div>
 </section>
 
