--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </div>
            
            <div class="column has-text-centered">
-            <a href="as">ICLR 2023</a><sup>1</sup>
+            <a href="as">ICLR 2023</a>
             </span>
           </div>
 
